[package]
name = "lctool"
version = "0.1.0"
edition = "2021"
authors = ["1ambd4 <dr.chen@mail.ustc.edu.cn>"]
description = """A simple tool for leetcode."""
license = "MIT OR Apache-2.0"
repository = "https://github.com/1ambd4/lctool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
